--- a/view/frontend/templates/checkout/payment/method/sepadirectdebit.phtml
+++ b/view/frontend/templates/checkout/payment/method/sepadirectdebit.phtml
@@ -1,6 +1,8 @@
 <?php
 declare(strict_types=1);
 
+/** @version 2.0.3 */
+
 /** @var Template $block */
 /** @var Escaper $escaper */
 /** @var CssClass $css */
