--- a/view/frontend/templates/script/component/creditcard-component.phtml
+++ b/view/frontend/templates/script/component/creditcard-component.phtml
@@ -1,6 +1,8 @@
 <?php
 declare(strict_types=1);
 
+/** @version 2.0.3 */
+
 use Magento\Framework\View\Element\Template;
 
 /** @var Template $block */
