--- a/view/frontend/templates/checkout/payment/method/creditcard.phtml
+++ b/view/frontend/templates/checkout/payment/method/creditcard.phtml
@@ -18,18 +18,19 @@ use Loki\CssUtils\Util\CssClass;
 $cards = $viewModel->getCards();
 ?>
 <div class="<?= /* @noEscape */ $css('mt-4') ?>">
-    <span class="<?= /* @noScape */ $css('', 'label') ?>">
-        <?= __('Select a Credit Card or Debit Card:') ?>
+    <span class="<?= /* @noScape */
+/* @noEscape */ $css('', 'label') ?>">
+        <?= $escaper->escapeHtml(__('Select a Credit Card or Debit Card:')) ?>
     </span>
     <div>
         <?php foreach ($cards as $card): ?>
-            <div class="<?= $css('flex gap-3 my-3', 'item') ?>">
-                <div class="<?= $css('w-8', 'item-image') ?>">
+            <div class="<?= /* @noEscape */ $css('flex gap-3 my-3', 'item') ?>">
+                <div class="<?= /* @noEscape */ $css('w-8', 'item-image') ?>">
                     <img src="<?= $card['img'] ?>""/>
                 </div>
                 <input
                     id="<?= $escaper->escapeHtml($viewModel->getElementId() . '-' . $card['code']) ?>"
-                    class="<?= $css('', 'item-input') ?>"
+                    class="<?= /* @noEscape */ $css('', 'item-input') ?>"
                     @change="selectCard"
                     <?php if ($viewModel->getValue() === $card['code']): ?>checked<?php endif; ?>
                     type="radio"
@@ -38,7 +39,7 @@ $cards = $viewModel->getCards();
                 />
                 <label
                     for="<?= $escaper->escapeHtml($viewModel->getElementId() . '-' . $card['code']) ?>"
-                    class="<?= $css('', 'item-label') ?>"
+                    class="<?= /* @noEscape */ $css('', 'item-label') ?>"
                 >
                     <?= $card['name'] ?>
                 </label>
