--- a/view/frontend/layout/loki_checkout.xml
+++ b/view/frontend/layout/loki_checkout.xml
@@ -3,6 +3,7 @@
     <body>
         <referenceContainer name="loki-components">
             <block template="LokiCheckout_Buckaroo::script/component/creditcard-component.phtml"/>
+            <block template="LokiCheckout_Buckaroo::script/component/paybybank-component.phtml"/>
             <block template="LokiCheckout_Buckaroo::script/component/afterpay-component.phtml"/>
             <block template="LokiCheckout_Buckaroo::script/component/hosted-fields-component.phtml"/>
         </referenceContainer>
