--- a/view/frontend/layout/loki_checkout_block_payment_methods.xml
+++ b/view/frontend/layout/loki_checkout_block_payment_methods.xml
@@ -21,7 +21,6 @@
                 template="Loki_FieldComponents::form/field.phtml">
                 <arguments>
                     <argument name="field_label" xsi:type="string">Voucher code:</argument>
-                    <argument name="is_required" xsi:type="boolean">true</argument>
                 </arguments>
             </block>
         </block>
@@ -45,7 +44,6 @@
                 <arguments>
                     <argument name="field_label" xsi:type="string">Bank account holder</argument>
                     <argument name="placeholder" xsi:type="string">John Doe</argument>
-                    <argument name="is_required" xsi:type="boolean">true</argument>
                 </arguments>
             </block>
 
@@ -56,7 +54,6 @@
                     <argument name="field_label" xsi:type="string">Bank account number</argument>
                     <argument name="alpine_mask" xsi:type="string">aa99 **** **** **** **** **** **** **** **</argument>
                     <argument name="placeholder" xsi:type="string">NL00 ABCD 0000 0000 0000 0000 0000 0000 00</argument>
-                    <argument name="is_required" xsi:type="boolean">true</argument>
                 </arguments>
             </block>
         </block>
@@ -75,7 +72,6 @@
                     <argument name="field_label" xsi:type="string">Date of Birth:</argument>
                     <argument name="minimum_age" xsi:type="number">18</argument>
                     <argument name="input_type" xsi:type="string">date</argument>
-                    <argument name="is_required" xsi:type="boolean">true</argument>
                 </arguments>
             </block>
 
@@ -86,7 +82,6 @@
                     <argument name="field_label" xsi:type="string">Bank Account Number:</argument>
                     <argument name="alpine_mask" xsi:type="string">aa99 **** **** **** **** **** **** **** **</argument>
                     <argument name="placeholder" xsi:type="string">NL00 ABCD 0000 0000 0000 0000 0000 0000 00</argument>
-                    <argument name="is_required" xsi:type="boolean">true</argument>
                 </arguments>
             </block>
 
@@ -96,7 +91,6 @@
                 <arguments>
                     <argument name="field_label" xsi:type="string">Terms and Conditions:</argument>
                     <argument name="field_type" xsi:type="string">checkbox</argument>
-                    <argument name="is_required" xsi:type="boolean">true</argument>
                 </arguments>
             </block>
         </block>
@@ -111,7 +105,6 @@
                     <argument name="field_label" xsi:type="string">Date of Birth:</argument>
                     <argument name="minimum_age" xsi:type="number">18</argument>
                     <argument name="input_type" xsi:type="string">date</argument>
-                    <argument name="is_required" xsi:type="boolean">true</argument>
                 </arguments>
             </block>
 
@@ -122,7 +115,6 @@
                     <argument name="field_label" xsi:type="string">Bank Account Number:</argument>
                     <argument name="alpine_mask" xsi:type="string">aa99 **** **** **** **** **** **** **** **</argument>
                     <argument name="placeholder" xsi:type="string">NL00 ABCD 0000 0000 0000 0000 0000 0000 00</argument>
-                    <argument name="is_required" xsi:type="boolean">true</argument>
                 </arguments>
             </block>
 
@@ -132,7 +124,6 @@
                 <arguments>
                     <argument name="field_label" xsi:type="string">Terms and Conditions:</argument>
                     <argument name="field_type" xsi:type="string">checkbox</argument>
-                    <argument name="is_required" xsi:type="boolean">true</argument>
                 </arguments>
             </block>
         </block>
@@ -140,35 +131,12 @@
         <block
             name="loki-checkout.payment.payment-methods.buckaroo_magento2_afterpay20.form"
             template="LokiCheckout_Core::generic/container.phtml">
-            <!--
-            <block
-                name="loki-checkout.payment.payment-methods.buckaroo_magento2_afterpay20.form.customer_DoB" as="customer_DoB"
-                template="Loki_FieldComponents::form/field.phtml">
-                <arguments>
-                    <argument name="field_label" xsi:type="string">Date of Birth:</argument>
-                    <argument name="minimum_age" xsi:type="number">18</argument>
-                    <argument name="input_type" xsi:type="string">date</argument>
-                    <argument name="is_required" xsi:type="boolean">true</argument>
-                </arguments>
-            </block>
-
-            <block
-                name="loki-checkout.payment.payment-methods.buckaroo_magento2_afterpay20.form.customer_iban" as="customer_iban"
-                template="Loki_FieldComponents::form/field.phtml">
-                <arguments>
-                    <argument name="field_label" xsi:type="string">Bank Account Number:</argument>
-                    <argument name="alpine_mask" xsi:type="string">aa99 **** **** **** **** **** **** **** **</argument>
-                    <argument name="placeholder" xsi:type="string">NL00 ABCD 0000 0000 0000 0000 0000 0000 00</argument>
-                    <argument name="is_required" xsi:type="boolean">true</argument>
-                </arguments>
-            </block>
 
             <block
                 name="loki-checkout.payment.payment-methods.buckaroo_magento2_afterpay20.form.customer_identificationNumber" as="customer_identificationNumber"
                 template="Loki_FieldComponents::form/field.phtml">
                 <arguments>
                     <argument name="field_label" xsi:type="string">Identification number:</argument>
-                    <argument name="is_required" xsi:type="boolean">true</argument>
                 </arguments>
             </block>
 
@@ -177,16 +145,24 @@
                 template="Loki_FieldComponents::form/field.phtml">
                 <arguments>
                     <argument name="field_label" xsi:type="string">Phone:</argument>
-                    <argument name="is_required" xsi:type="boolean">true</argument>
                 </arguments>
             </block>
-            -->
+
             <block
-                name="loki-checkout.payment.payment-methods.buckaroo_magento2_afterpay20.form.customer_coc" as="customer_telephone"
+                name="loki-checkout.payment.payment-methods.buckaroo_magento2_afterpay20.form.customer_DoB" as="customer_DoB"
+                template="Loki_FieldComponents::form/field.phtml">
+                <arguments>
+                    <argument name="field_label" xsi:type="string">Date of Birth:</argument>
+                    <argument name="minimum_age" xsi:type="number">18</argument>
+                    <argument name="input_type" xsi:type="string">date</argument>
+                </arguments>
+            </block>
+
+            <block
+                name="loki-checkout.payment.payment-methods.buckaroo_magento2_afterpay20.form.customer_coc" as="customer_coc"
                 template="Loki_FieldComponents::form/field.phtml">
                 <arguments>
                     <argument name="field_label" xsi:type="string">COC Number:</argument>
-                    <argument name="is_required" xsi:type="boolean">true</argument>
                 </arguments>
             </block>
 
@@ -196,7 +172,6 @@
                 <arguments>
                     <argument name="field_label" xsi:type="string">Terms and Conditions:</argument>
                     <argument name="field_type" xsi:type="string">checkbox</argument>
-                    <argument name="is_required" xsi:type="boolean">true</argument>
                 </arguments>
             </block>
         </block>
