--- a/view/frontend/templates/checkout/payment/method/paybybank.phtml
+++ b/view/frontend/templates/checkout/payment/method/paybybank.phtml
@@ -17,7 +17,7 @@ use Loki\CssUtils\Util\CssClass;
 
 $issuers = $viewModel->getIssuers();
 ?>
-<div class="<?= /* @noEscape */ $css('mt-4') ?>">
+<div class="<?= /* @noEscape */ $css('my-4') ?>">
     <span class="<?= /* @noEscape */ $css('', 'label') ?>">
         <?= $escaper->escapeHtml(__('Select an issuer:')) ?>
     </span>
