--- a/view/frontend/layout/loki_checkout_block_payment_methods.xml
+++ b/view/frontend/layout/loki_checkout_block_payment_methods.xml
@@ -4,6 +4,14 @@
         <block
             name="loki-checkout.payment.methods.buckaroo_magento2_creditcard.form"
             template="LokiCheckout_Core::generic/container.phtml">
+            <arguments>
+                <argument name="css_classes" xsi:type="array">
+                    <item name="block" xsi:type="array">
+                        <item name="default" xsi:type="string">my-4</item>
+                    </item>
+                </argument>
+            </arguments>
+
             <block
                 name="loki-checkout.payment.methods.buckaroo_magento2_creditcard.form.card_type"
                 template="LokiCheckout_Buckaroo::checkout/payment/method/creditcard.phtml"/>
@@ -28,6 +36,14 @@
         <block
             name="loki-checkout.payment.methods.buckaroo_magento2_paybybank.form"
             template="LokiCheckout_Core::generic/container.phtml">
+            <arguments>
+                <argument name="css_classes" xsi:type="array">
+                    <item name="block" xsi:type="array">
+                        <item name="default" xsi:type="string">my-4</item>
+                    </item>
+                </argument>
+            </arguments>
+
             <block
                 name="loki-checkout.payment.methods.buckaroo_magento2_paybybank.form.issuer" as="issuer"
                 template="LokiCheckout_Buckaroo::checkout/payment/method/paybybank.phtml"
@@ -37,6 +53,13 @@
         <block
             name="loki-checkout.payment.methods.buckaroo_magento2_sepadirectdebit.form"
             template="LokiCheckout_Core::generic/container.phtml">
+            <arguments>
+                <argument name="css_classes" xsi:type="array">
+                    <item name="block" xsi:type="array">
+                        <item name="default" xsi:type="string">my-4</item>
+                    </item>
+                </argument>
+            </arguments>
 
             <block
                 name="loki-checkout.payment.methods.buckaroo_magento2_sepadirectdebit.form.customer_account_name" as="customer_account_name"
@@ -67,6 +90,14 @@
         <block
             name="loki-checkout.payment.methods.buckaroo_magento2_afterpay.form"
             template="LokiCheckout_Core::generic/container.phtml">
+            <arguments>
+                <argument name="css_classes" xsi:type="array">
+                    <item name="block" xsi:type="array">
+                        <item name="default" xsi:type="string">my-4</item>
+                    </item>
+                </argument>
+            </arguments>
+
             <block
                 name="loki-checkout.payment.methods.buckaroo_magento2_afterpay.form.customer_DoB" as="customer_DoB"
                 template="Loki_FieldComponents::form/field.phtml">
@@ -102,6 +133,14 @@
         <block
             name="loki-checkout.payment.methods.buckaroo_magento2_afterpay2.form"
             template="LokiCheckout_Core::generic/container.phtml">
+            <arguments>
+                <argument name="css_classes" xsi:type="array">
+                    <item name="block" xsi:type="array">
+                        <item name="default" xsi:type="string">my-4</item>
+                    </item>
+                </argument>
+            </arguments>
+
             <block
                 name="loki-checkout.payment.methods.buckaroo_magento2_afterpay2.form.customer_DoB" as="customer_DoB"
                 template="Loki_FieldComponents::form/field.phtml">
@@ -137,6 +176,13 @@
         <block
             name="loki-checkout.payment.methods.buckaroo_magento2_afterpay20.form"
             template="LokiCheckout_Core::generic/container.phtml">
+            <arguments>
+                <argument name="css_classes" xsi:type="array">
+                    <item name="block" xsi:type="array">
+                        <item name="default" xsi:type="string">my-4</item>
+                    </item>
+                </argument>
+            </arguments>
 
             <block
                 name="loki-checkout.payment.methods.buckaroo_magento2_afterpay20.form.customer_identificationNumber" as="customer_identificationNumber"
