--- a/view/frontend/layout/loki_checkout.xml
+++ b/view/frontend/layout/loki_checkout.xml
@@ -5,7 +5,7 @@
         <remove src="Buckaroo_Magento2::css/styles.css"/>
     </head>
     <body>
-        <referenceContainer name="loki-components">
+        <referenceContainer name="loki.components">
             <block template="LokiCheckout_Buckaroo::script/component/creditcard-component.phtml"/>
             <block template="LokiCheckout_Buckaroo::script/component/paybybank-component.phtml"/>
             <block template="LokiCheckout_Buckaroo::script/component/afterpay-component.phtml"/>
